# sidewinder

./: .gitignore  LICENSE  README.md  chiri_config.json5  pyproject.toml  requirements.txt  sidewinder_test.py
cpp/include/sidewinder/__builtins/: types.hpp
data/: python3_lexer.json  python3_lexer_base.json  python3_parser.json  python3_parser_base.json  python3_transform_grammar.json
doc/: builtins.md  function_generator.py  functions.hpp  planning.md
src/: ast.py  lexer.py
src/sidewinder/: ast.py  lexer.py  token.py
src/sidewinder/compiler_toolchain/: antlr_ast_builder.py  ast.py  ast_builder.py  code_generator.py  compiler.py  default_ast_builder.py  default_linker.py  lexer.py  linker.py  parser.py  swc.py  token.py  token_type.py
src/sidewinder/compiler_toolchain/antlr/: ast_builder.py  ast_context.py  default_parser.py  parser.py  rendering.py
src/sidewinder/compiler_toolchain/clang/: linker.py
src/sidewinder/compiler_toolchain/codegen/: code_generator.py  types.py
src/sidewinder/modules/builtins/: __init__.sw  all.sw  chr.sw  ord.sw  print.sw
test/: conftest.py  test_sidewinder.py
tools/: generate_print_function.py  primary.sw  print_ast.py  print_parse_tree.py  swc.py  test_input.sw  test_parser.py
