[project]
name = "sidewinder"
version = "1.0"
requires-python = ">=3.8"
dependencies = ["antlr4-python3-runtime == 4.13.2", "llvmlite == 0.43.0"]

[project.scripts]
swc = "sidewinder.compiler_toolchain.swc:main"

[project.optional-dependencies]
PNG = ["pydot >= 3.0.2", "graphviz >= 0.20.3"]

[build-system]
requires = ["setuptools>=40.8.0", "isort >= 5.13.2", "black >= 24.10.0"]
build-backend = "setuptools.build_meta"

# Tells setuptools that the root directory of all packages is under ./src
[tool.setuptools]
package-dir = { "" = "src" }

[tool.black]
line-length = 100
